--- a/k8s-specifications/deployment.yml
+++ b/k8s-specifications/deployment.yml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
       - name: onlinebookstore-container
-        image: hemantakumarpati/onlinebookstore:55-093323af89eb2a567b01e2180e9f822f0e36c82b
+        image: ${IMAGE_URL}/${IMAGE_REPO}/${NAME}:${VERSION}
+        imagePullPolicy: Always
         resources:
           requests:
             cpu: 100m
