--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -4,20 +4,22 @@ on:
   push:
     branches:
       - master
+
 jobs:
   build-and-push:
     runs-on: self-hosted
+
     env:
       NAME: onlinebookstore
       IMAGE_REPO: hemantakumarpati
-      IMAGE_URL: hub.docker.com
 
     steps:
-      #  Checkout the repo
+
+      # Checkout Code
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      #  Set version tag (BUILD_ID + short commit SHA)
+      # Set VERSION (BUILD_ID + short SHA)
       - name: Set image version
         id: vars
         run: |
@@ -27,30 +29,36 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           echo "IMAGE=${{ env.NAME }}:$VERSION" >> $GITHUB_ENV
 
-      #  Set up Java (for Maven build)
+      # Install Java (required for Maven)
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: '17'
 
-      #  Build WAR file with Maven
+      # Install Maven (needed for mvn package)
+      - name: Install Maven
+        run: |
+          sudo apt update
+          sudo apt install -y maven
+
+      # Build WAR file
       - name: Build WAR
         run: mvn clean package
 
-      #  Log in to Docker Hub
+      # Login to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 6️⃣ Build Docker image
-      - name: Build Docker image
+      # Build Docker Image
+      - name: Build Docker Image
         run: |
           docker build -t $IMAGE_REPO/$IMAGE .
 
-      # 7️⃣ Push Docker image
-      - name: Push Docker image
+      # Push Docker Image
+      - name: Push Docker Image
         run: |
           docker push $IMAGE_REPO/$IMAGE
