--- a/k8s-specifications/deployment.yml
+++ b/k8s-specifications/deployment.yml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
       - name: onlinebookstore-container
-        image: ${IMAGE_URL}/${IMAGE_REPO}/${NAME}:${VERSION}
+        # image: ${IMAGE_URL}/${IMAGE_REPO}/${NAME}:${VERSION}
+        image: ${IMAGE_REPO}/${NAME}:${VERSION}
         imagePullPolicy: Always
         resources:
           requests:
