--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -8,7 +8,6 @@ on:
 env:
   NAME: onlinebookstore
   IMAGE_REPO: hemantakumarpati
-  IMAGE_URL: hub.docker.com
   GKE_CLUSTER_NAME: my-gke-cluster
   GKE_CLUSTER_LOCATION: asia-south1-a
   K8S_NAMESPACE: default
@@ -70,7 +69,7 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      # Checkout repository (needed for YAML files)
+      # Checkout repo (needed for YAML files)
       - uses: actions/checkout@v3
 
       # Authenticate to GCP
@@ -87,19 +86,15 @@ jobs:
           location: ${{ env.GKE_CLUSTER_LOCATION }}
           credentials: ${{ secrets.GCP_SA_KEY }}
 
-      # Replace placeholders in deployment YAML
+      # Replace placeholders in deployment YAML with actual image
       - name: Replace placeholders in deployment.yaml
         run: |
           find ${{ env.K8S_MANIFESTS_PATH }} -type f -name "*.yaml" -exec sed -i \
-          -e "s|\${IMAGE_URL}|${{ env.IMAGE_URL }}|g" \
-          -e "s|\${IMAGE_REPO}|${{ env.IMAGE_REPO }}|g" \
-          -e "s|\${NAME}|${{ env.NAME }}|g" \
-          -e "s|\${VERSION}|${{ env.VERSION }}|g" {} \;
+          -e "s|\${IMAGE_REPO}/${NAME}:${VERSION}|${{ env.IMAGE_REPO }}/${{ env.NAME }}:${{ env.VERSION }}|g" {} \;
 
       # Apply manifests to GKE
       - name: Apply manifests
         run: kubectl apply -f ${{ env.K8S_MANIFESTS_PATH }} --namespace ${{ env.K8S_NAMESPACE }}
+      - name: Apply manifests
+        run: kubectl apply -f ${{ env.K8S_MANIFESTS_PATH }} --namespace ${{ env.K8S_NAMESPACE }}
 
-      # Optional: Wait for deployment rollout
-      - name: Wait for rollout
-        run: kubectl rollout status deployment/${{ env.NAME }} --namespace ${{ env.K8S_NAMESPACE }}
