--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -1,4 +1,4 @@
-name: Build, Push, and Deploy to GKE
+name: Build, Push and Deploy to GKE
 
 on:
   push:
@@ -10,17 +10,19 @@ env:
   IMAGE_REPO: hemantakumarpati
   GKE_CLUSTER_NAME: my-gke-cluster
   GKE_CLUSTER_LOCATION: asia-south1-a
+  K8S_DEPLOYMENT_NAME: onlinebookstore
   K8S_NAMESPACE: default
   K8S_MANIFESTS_PATH: k8s-specifications/
 
 jobs:
   build-and-push:
     runs-on: self-hosted
-
     steps:
+      # Checkout code
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Set image version
       - name: Set image version
         id: vars
         run: |
@@ -29,56 +31,67 @@ jobs:
           VERSION="${BUILD_ID}-${SHORT_SHA}"
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           echo "IMAGE=${{ env.NAME }}:$VERSION" >> $GITHUB_ENV
+          echo "FULL_IMAGE=${{ env.IMAGE_REPO }}/${{ env.NAME }}:$VERSION" >> $GITHUB_ENV
 
+      # Setup Java
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: '17'
 
+      # Install Maven
       - name: Install Maven
         run: |
           sudo apt update
           sudo apt install -y maven
 
+      # Build WAR
       - name: Build WAR
         run: mvn clean package
 
+      # Docker login
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker Image
-        run: docker build -t $IMAGE_REPO/$IMAGE .
+      # Build Docker image
+      - name: Build Docker image
+        run: docker build -t ${{ env.FULL_IMAGE }} .
 
-      - name: Push Docker Image
-        run: docker push $IMAGE_REPO/$IMAGE
+      # Push Docker image
+      - name: Push Docker image
+        run: docker push ${{ env.FULL_IMAGE }}
 
   deploy:
     needs: build-and-push
     runs-on: self-hosted
-
     steps:
+      # Checkout code
       - uses: actions/checkout@v3
 
+      # Authenticate to GCP
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Set up GKE
+      # Get GKE credentials
+      - name: Set up GKE credentials
         uses: google-github-actions/get-gke-credentials@v1
         with:
           cluster_name: ${{ env.GKE_CLUSTER_NAME }}
           location: ${{ env.GKE_CLUSTER_LOCATION }}
           credentials: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Replace placeholders in deployment.yml
+      # Replace placeholders in deployment.yml
+      - name: Replace image in deployment
         run: |
-          find ${{ env.K8S_MANIFESTS_PATH }} -type f -name "*.yml" -exec sed -i \
-          -e "s|\${IMAGE_REPO}/${NAME}:${VERSION}|${{ env.IMAGE_REPO }}/${{ env.NAME }}:${{ env.VERSION }}|g" {} \;
+          sed -i "s|\${IMAGE_REPO}/${NAME}:${VERSION}|${{ env.FULL_IMAGE }}|g" ${{ env.K8S_MANIFESTS_PATH }}/deployment.yml
+          cat ${{ env.K8S_MANIFESTS_PATH }}/deployment.yml
 
-      - name: Apply manifests
+      # Apply manifests to GKE
+      - name: Apply Kubernetes manifests
         run: kubectl apply -f ${{ env.K8S_MANIFESTS_PATH }} --namespace ${{ env.K8S_NAMESPACE }}
