--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -21,11 +21,11 @@ jobs:
       FULL_IMAGE: ${{ steps.set-vars.outputs.FULL_IMAGE }}
       VERSION: ${{ steps.set-vars.outputs.VERSION }}
     steps:
-      # 1️⃣ Checkout code
+      # Checkout code
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2️⃣ Set image version
+      # Set image version
       - name: Set image version
         id: set-vars
         run: |
@@ -38,35 +38,35 @@ jobs:
           echo "::set-output name=VERSION::$VERSION"
           echo "::set-output name=FULL_IMAGE::$FULL_IMAGE"
 
-      # 3️⃣ Setup Java
+      # Setup Java
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: '17'
 
-      # 4️⃣ Install Maven
+      # Install Maven
       - name: Install Maven
         run: |
           sudo apt update
           sudo apt install -y maven
 
-      # 5️⃣ Build WAR
+      # Build WAR
       - name: Build WAR
         run: mvn clean package
 
-      # 6️⃣ Docker login
+      # Docker login
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 7️⃣ Build Docker image
+      # Build Docker image
       - name: Build Docker image
         run: docker build -t ${{ env.FULL_IMAGE }} .
 
-      # 8️⃣ Push Docker image
+      # Push Docker image
       - name: Push Docker image
         run: docker push ${{ env.FULL_IMAGE }}
 
@@ -84,16 +84,16 @@ jobs:
       K8S_NAMESPACE: ${{ env.K8S_NAMESPACE }}
       K8S_MANIFESTS_PATH: ${{ env.K8S_MANIFESTS_PATH }}
     steps:
-      # 1️⃣ Checkout repo
+      # Checkout repo
       - uses: actions/checkout@v3
 
-      # 2️⃣ Authenticate to GCP
+      # Authenticate to GCP
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      # 3️⃣ Get GKE credentials
+      # Get GKE credentials
       - name: Set up GKE credentials
         uses: google-github-actions/get-gke-credentials@v1
         with:
@@ -101,14 +101,14 @@ jobs:
           location: ${{ env.GKE_CLUSTER_LOCATION }}
           credentials: ${{ secrets.GCP_SA_KEY }}
 
-      # 4️⃣ Apply manifests (creates deployment/service initially)
+      # Apply manifests (creates deployment/service initially)
       - name: Apply manifests
         run: kubectl apply -f ${{ env.K8S_MANIFESTS_PATH }} --namespace ${{ env.K8S_NAMESPACE }}
 
-      # 5️⃣ Update deployment with the latest image
+      # Update deployment with the latest image
       - name: Update deployment image
         run: |
           echo "Deploying image: $FULL_IMAGE"
           kubectl set image deployment/${{ env.K8S_DEPLOYMENT_NAME }} \
             onlinebookstore-container=$FULL_IMAGE \
-            --namespace ${{ env.K8S_NAMESPACE }}     
+            --namespace ${{ env.K8S_NAMESPACE }} 
