--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -78,14 +78,16 @@ jobs:
     needs: build-and-push
     runs-on: self-hosted
     env:
-      FULL_IMAGE: ${{ needs.build-and-push.outputs.FULL_IMAGE }}
       VERSION: ${{ needs.build-and-push.outputs.VERSION }}
     steps:
       # Checkout repo
       - uses: actions/checkout@v3
 
+      - name: Construct Image Name
+        run: echo "FULL_IMAGE=${IMAGE_REPO}/${NAME}:${VERSION}" >> $GITHUB_ENV
+
       - name: Debug Image Name
-        run: echo "Deploying image ${{ env.FULL_IMAGE }}"
+        run: echo "Deploying image $FULL_IMAGE"
 
       # Authenticate to GCP
       - name: Authenticate to GCP
